# turboadb

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  turboadb-gui.spec
docs/: guide.html  index.html  style.css
examples/: examples.py
scripts/: build_exe.py  gui_entry.py  make_icon.py  release.py
tests/: test_offline.py
turboadb/: README.md  __init__.py  __main__.py  cli.py  config.py  core.py  devices.py  exceptions.py  remote_deploy.py  results.py  scrcpy.py  tools.py  toolsdl.py  update.py
turboadb/gui/: __init__.py  __main__.py  app.py  apps_panel.py  camera_widget.py  connect_dialog.py  console.py  controls_panel.py  deploy_dialog.py  device_tab.py  ffmpeg_tools.py  file_browser.py  fileutil.py  flowlayout.py  log_panel.py  logcat_view.py  main_window.py  mirror_panel.py  phone_panel.py  remote_webcam.py  scrollback.py  session_dialog.py  sessions.py  settings.py  settings_dialog.py  terminal.py  theme.py
