[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "turboadb"
version = "1.0.5"
description = "TurboADB — Android ADB + scrcpy device toolkit for automotive/embedded (Android Automotive OS / IVI) & general Android: Python API, CLI, and a full PyQt5 GUI."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Naveen Daniel Kennedy" }]
keywords = ["adb", "scrcpy", "android", "automotive", "android-automotive",
            "ivi", "logcat", "automation", "pyqt5", "testing", "embedded"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]
# Batteries-included: the engine + CLI wrap adb/scrcpy and need no third-party
# Python deps. PyQt5 is OPTIONAL ([gui]) — the GUI also ships as a bundled exe so
# it runs even where PyQt5 has no wheel. (Making PyQt5 mandatory broke `pip
# install` on Pythons without a PyQt5 wheel, so it stays optional.)
dependencies = []

[project.optional-dependencies]
gui = ["PyQt5>=5.15"]
winrm = ["pywinrm>=0.4.3"]            # remote 'serve' deploy over WinRM (NTLM)
all = ["PyQt5>=5.15", "pywinrm>=0.4.3"]

[project.scripts]
turboadb = "turboadb.cli:main"
turboadb-docs = "turboadb.cli:open_docs"
turboadb-shortcut = "turboadb.cli:create_shortcut"

[project.gui-scripts]
turboadb-gui = "turboadb.cli:launch_gui"

[project.urls]
Homepage = "https://nvnkennedy.github.io/turboadb/"
Documentation = "https://nvnkennedy.github.io/turboadb/"
Source = "https://github.com/NVNKENNEDY/turboadb"
Download = "https://github.com/NVNKENNEDY/turboadb/releases/latest"
Changelog = "https://github.com/NVNKENNEDY/turboadb/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/NVNKENNEDY/turboadb/issues"

[tool.setuptools]
packages = ["turboadb", "turboadb.gui"]

[tool.setuptools.package-data]
turboadb = ["*.md", "assets/*.ico", "assets/*.png", "bin/*.exe"]
